# rust-line-ending

./: Cargo.toml  README.md
src/: lib.rs  line_ending.rs  peekable_ext.rs
tests/: line_ending_tests.rs  peekable_ext_tests.rs
