[package]
name = "line-ending"
version = "1.3.0"
description = "Detect, normalize, and convert line endings across platforms, including support for character streams. Ensures consistent handling of LF, CRLF, and CR line endings in text processing."
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
repository = "https://github.com/jzombie/rust-line-ending"
license = "MIT"

[dependencies]
doc-comment = "0.3.3"
