[package]
name = "line-ending"
version = "1.5.1"
description = "Detect, normalize, and convert line endings across platforms, including support for character streams. Ensures consistent handling of LF, CRLF, and CR line endings in text processing."
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
repository = "https://github.com/jzombie/rust-line-ending"
license = "MIT"

[dev-dependencies]
doc-comment = "0.3.3"
